// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Family F — cwd variants > F1 — resolves normally with Program Files (x86) cwd (win32) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot resolve @mariozechner/pi-coding-agent/package.json
  bare-import  cannot resolve @oh-my-pi/pi-coding-agent/package.json
  managed      ok"
`;

exports[`Family F — cwd variants > F1 — resolves normally with spaces in cwd (linux) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;

exports[`Family F — cwd variants > F2 — resolves with Greek/Cyrillic/emoji in cwd 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  managed      ok"
`;
